# vance-core

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
ab_tests/benefits/: variant_a.md  variant_b.md  variant_c.md
ab_tests/cta/: variant_a.md  variant_b.md  variant_c.md
ab_tests/faq/: variant_a.md  variant_b.md  variant_c.md
ab_tests/hero/: variant_a.md  variant_b.md  variant_c.md
ab_tests/pricing/: variant_a.md  variant_b.md  variant_c.md
agents/_base/: README.md  __init__.py  agent.py  config.py  events.py
agents/ads/: Dockerfile  audience_builder.py  budget_reallocator.py  campaign_manager.py  config.yaml  creative_gen.py  creative_rotator.py  db.py  main.py  performance_monitor.py  tasks.py
agents/analytics/: Dockerfile  README.md  __init__.py  ab_test_manager.py  alerter.py  cohort_tracker.py  config.py  config.yaml  cross_product_reporter.py  db.py  engagement_scorer.py  feature_tracker.py  funnel_analyzer.py  main.py  query_answerer.py  reporter.py  tasks.py  usage_collector.py
agents/backup/: Dockerfile  config.yaml  db.py  encryptor.py  file_backup.py  mailcow_backup.py  main.py  postgres_backup.py  restore_verifier.py  tasks.py
agents/content/: Dockerfile  blog_writer.py  calendar_planner.py  config.yaml  db.py  landing_writer.py  main.py  newsletter_writer.py  social_writer.py  tasks.py
agents/deploy/: Dockerfile  config.yaml  db.py  env_syncer.py  main.py  pipeline_runner.py  (+4 more)
scripts/: README.md  setup_contabo.sh  setup_local.sh  setup_tools.sh
shared/: celery_app.py
webhooks/: Dockerfile  README.md  app.py  package.json
(+429 files in other folders)
