[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vance"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "redis>=5.0.0",
    "psycopg2-binary>=2.9.0",
    "structlog>=24.0.0",
    "httpx>=0.27.0",
    "rapidfuzz>=3.0.0",
    "stripe>=9.0.0",
    "pyyaml>=6.0.0",
    "celery[redis]>=5.3.0",
    "playwright>=1.44.0",
    "weasyprint>=62.0",
    "boto3>=1.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "fakeredis>=2.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "core",
    "agents",
    "shared",
    "webhooks",
]
